Add epsilon to more floating-point probability comparisons
(cherry picked from commit c5586894366f1937716c2f561e82bc17fdb12857)